assets/css/hallooou.css
/* ... */
.project-container {
    margin-top: 50px;
    position: relative;
}

.recent-project {
    position: relative;
    overflow: hidden;
    margin: 5px;
}
.recent-project img {
    width: 100%;
}
.project-info {
  position: absolute;
  left: 0;
  top: 50%;
  margin-top: -32px;
  color: #fff;
  width: 100%;
  text-align: center;
}
.project-info h3 {
    line-height: 18px;
}
ul.project-meta {
    margin: 0;
    padding: 0; 
}

ul.project-meta li{
    display: inline-block;
    padding:5px 10px;
    border: 1px solid #fff;
}

ul.project-meta li a{
    display: inline-block;
    color: #fff;
}
ul.project-meta li a:hover{
    color: #f76758;
}

.full-project {
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    padding: 16px 20px;
    line-height: 18px;
    font-size: 18px;
    text-transform: capitalize;
    background: #931ed1; /* Primary color, can be changed via colors.css */
}
.full-project:hover {
    background: rgba(223,81,76, 1); /* Hover color, can be changed via colors.css */
}
.full-project a {
    padding: 0px;
    display: block;
    color: #fff;
}

.full-project a:hover{
    color:#fff;
}

.full-project a i{
    font-size: 14px;
    padding: 0 10px;
    line-height: 20px;
}

/* Overlay and hover effect
/* ---------------------------------------------- */
.recent-project::before {
    content: "";
    background: rgba(59,59,59,0.8);
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    opacity: 0;
    -webkit-transition: all 0.2s;
       -moz-transition: all 0.2s;
         -o-transition: all 0.2s;
            transition: all 0.2s;
}
.recent-project:hover::before {
    opacity: 1;
}

.project-info h3,
ul.project-meta,
.full-project {
    opacity: 0;
    visibility: hidden;
    -webkit-transform: translateY(100px);
       -moz-transform: translateY(100px);
        -ms-transform: translateY(100px);
         -o-transform: translateY(100px);
            transform: translateY(100px);
}
.project-info h3,
ul.project-meta{
    -webkit-transition: all 0.3s;
       -moz-transition: all 0.3s;
         -o-transition: all 0.3s;
            transition: all 0.3s;
}

.full-project {
    -webkit-transition: all 0.5s;
       -moz-transition: all 0.5s;
         -o-transition: all 0.5s;
            transition: all 0.5s;
}
.recent-project:hover .project-info h3,
.recent-project:hover ul.project-meta,
.recent-project:hover .full-project {
    opacity: 1;
    visibility: visible;
    -webkit-transform: translateY(0);
       -moz-transform: translateY(0);
        -ms-transform: translateY(0);
         -o-transform: translateY(0);
            transform: translateY(0);
}



/* Carousel navigation
/* ---------------------------------------------- */

.project-navigation .btn-next,
.project-navigation .btn-prev {
    position: absolute;
    width: 40px;
    height: 70px;
    top: 40%;
    margin-top: -40px;
    background: rgba(59,59,59,0.9);
    color: #fff;
    line-height: 80px;
    text-align: center;
    font-size: 18px;
    opacity: 0;
    z-index: 997;
    cursor: pointer;
}

.project-navigation .btn-prev {
    left: 0;
}

.project-navigation .btn-next {
    right: 0;
}

.project-navigation a:hover {
    width: 60px;
    background: #931ed1; /* Primary color, can be changed via colors.css */
}

.project-container:hover .project-navigation .btn-prev,
.project-container:hover .project-navigation .btn-next {
    opacity: 1;
}


/*       5.7: Clients section
/* ---------------------------------------------- */

.our-clients {
    background-color: rgba(9,113,178, 1); /* Primary color, can be changed via colors.css */
}

.our-clients h2{
    color: #fff;
}

.our-clients .i{
    text-align:center;
    line-height:120px;
}

.our-clients .i img{
    display:inline-block;
    margin:0;
    padding: 0;
}

.client-slider{
    margin: 0 auto;
}

.client-slider .item:before{
    content: '';
    display: inline-block;
    text-align: center;
}

.client-slider .item{
    display: inline-block;
    margin:0 auto;
    width: 100%;
    height: 100%;
}

/* change client logo slider pagination color to white for readibility */
.client-slider.owl-theme .owl-controls .owl-page span{
    background: rgba(255, 255, 255, .5) !important;
}


/*       5.8: Contact section
/* ---------------------------------------------- */

.contact-form,
.contact-address{
    padding-top: 60px;
}

.contact-form .form-group{
    padding: 5px 0;
    min-height: 100%;
}

.contact-form .form-group label{
    font-weight: 600;
}

.contact-form .form-group button{
    display: inline-block;
    min-height: 100%;
}

.contact-form .form-group input,
.contact-form .form-group textarea{
    border-radius: 0;
    padding: 20px 10px;
    min-width: 100%;
    font-size: 16px;
}

.contact-form .form-group textarea{
    padding-top: 10px;
}


.contact-form .form-group .btn-default{
    min-width: 100%;
}

.contact-form .form-group input[type="email"],
.contact-form .form-group input[type="phone"],
.contact-form .form-group input[type="text"] 
{
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    height: 42px; /* Increase height as required */
    margin-bottom: 0px;
    padding: 0 10px; /*  Now only left & right padding */

}

.contact-address ul{
    list-style: none;
    padding: 0;
    margin: 0;
}

.contact-address ul li{
    font-size: 16px;
}

.contact-address ul li span{
    font-weight: 600;
    display: inline-block;
    min-width: 80px;
}

.contact-form label.error,
.contact-form label.error.valid{
    color:#f00;
    padding-top: 10px;
}

.contact-form label.error.valid{
    color:#018804;
}

.form-alerts .alert{
    border-radius: 0;
    border: 0;
}


.form-alerts .alert.alert-success,
.form-alerts .alert.alert-danger{
    color: #fff;
    background: #85ceab;
}

.form-alerts .alert.alert-danger{
    background: #fe8080;
}
/* ... */

